<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VAGm</string>
    <string name="btn_find">Find Device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Remote Bluetooth</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a device to connect</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="title_activity_controller_selection">ControllerSelection</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_controller">ControllerActivity</string>
    <string name="VAGnumber">VAG Number:</string>
    <string name="component">Component:</string>
    <string name="faultCodesButton">Fault Codes - 02</string>
    <string name="measBlocks">Meas. Blocks - 08</string>
    <string name="ouputTests">Ouput Tests - 03</string>
    <string name="closeController">Close Controller, Go Back - 06</string>
    <string name="bEngine">01-Engine</string>
    <string name="bABS">03-ABS Brakes</string>
    <string name="bAirbags">15-Airbags</string>
    <string name="bInstruments">17-Instruments</string>
    <string name="bImmobilizer">25-Immobilizer</string>
    <string name="bComfort">46 - Comfort</string>
    <string name="directEntry">Direct Entry</string>
    <string name="addressWord">Address Word (01-FF): </string>
    <string name="go">  Go!  </string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="savedDevice">savedDevice</string>
    <string name="connectAdapter">Connect to adapter</string>

</resources>
