<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ControllerActivity" >

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/component"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/VAGnumber"
        android:layout_below="@+id/VAGnumber"
        android:text="@string/component"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/VAGnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/VAGnumber"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bEngine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/okButton"
        android:layout_below="@+id/okButton"
        android:text="@string/measBlocks" />

    <Button
        android:id="@+id/bABS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bEngine"
        android:layout_below="@+id/bEngine"
        android:text="@string/ouputTests" />

    <Button
        android:id="@+id/bAirbags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bABS"
        android:layout_below="@+id/bABS"
        android:layout_marginTop="40dp"
        android:text="@string/closeController" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/faultCodesButton"
        android:width="@dimen/bConrollerSelection" />

</RelativeLayout>